src/lexer.c
/* Generated by re2c 4.2 on Sat May  3 08:53:40 2025 */
#line 1 "/Users/spencernold/Documents/Workspaces/GitHub/tlang/src/lexer.re"
#include <stdlib.h>
#include <string.h>

#include "lexer.h"

#line 9 "/Users/spencernold/Documents/Workspaces/GitHub/tlang/src/lexer.c"
#define YYMAXFILL 11
#line 6 "/Users/spencernold/Documents/Workspaces/GitHub/tlang/src/lexer.re"

#define SIZE 64 * 1024

struct lex_token_stream_t {
    tok_queue_t* queue;
    int value;
};

struct lex_input_t {
    FILE* file;
    unsigned char buf[SIZE + YYMAXFILL];
    unsigned char* limit;
    unsigned char* current;
    unsigned char* marker;
    unsigned char* token;
    int eof;
};

lex_input_t* lex_open(FILE* file) {
    lex_input_t* input = (lex_input_t*) malloc(sizeof(lex_input_t));
    if (input == NULL) {
        return NULL;
    }
    input->file = file;
    input->limit = input->buf + SIZE;
    input->current = input->limit;
    input->marker = input->limit;
    input->token = input->limit;
    input->eof = 0;
    return input;
}

void lex_close_input(lex_input_t* input) {
    free(input);
}

int fill(lex_input_t* input, size_t size) {
    if (input->eof) {
        return 0;
    }
    const size_t free = input->token - input->buf;
    if (free < size) {
        return 0;
    }
    memmove(input->buf, input->token, input->limit - input->token);
    input->limit -= free;
    input->current -= free;
    input->marker -= free;
    input->token -= free;
    input->limit += fread(input->limit, 1, free, input->file);
    if (input->limit < input->buf + SIZE) {
        input->eof = 1;
        memset(input->limit, 0, YYMAXFILL);
        input->limit += YYMAXFILL;
    }
    return 1;
}

void _append_floating_point_literal(lex_token_stream_t* stream, int type, double value) {
    append_float_tok_queue(stream->queue, type, value);
}

void _append_decimal_literal(lex_token_stream_t* stream, int type, long long value) {
    append_int_tok_queue(stream->queue, type, value);
}

void _append_bool_literal(lex_token_stream_t* stream, int type) {
    append_int_tok_queue(stream->queue, type, type == TRUE_VALUE);
}

void _append_str_literal(lex_token_stream_t* stream, int type, char* str, int len) {
    append_str_tok_queue(stream->queue, type, str, len);
}

void _append_token(lex_token_stream_t* stream, int type) {
    append_tok_queue(stream->queue, type);
}

double _parse_float_from_re2c(lex_input_t* input) {
    const int len = (int) (input->current - input->token);
    char buf[len + 1];
    strncpy(buf, (char*) input->token, len);
    buf[len] = 0;
    return atof(buf);
}

long long _parse_dec_from_re2c(lex_input_t* input) {
    const int len = (int) (input->current - input->token);
    char buf[len + 1];
    strncpy(buf, (char*) input->token, len);
    buf[len] = 0;
    return atoll(buf);
}

long long _parse_hex_from_re2c(lex_input_t* input) {
    const int len = (int) (input->current - input->token);
    char buf[len + 1];
    strncpy(buf, (char*) input->token, len);
    buf[len] = 0;
    return strtoll(buf, NULL, 16);
}

char* _parse_str_from_re2c(lex_input_t* input) {
    unsigned char quote = input->current[-1];
    unsigned char* start = input->token;
    int length;
    for (length = 1;;) {
        length++;
        
#line 121 "/Users/spencernold/Documents/Workspaces/GitHub/tlang/src/lexer.c"
{
	char yych;
	++start;
#line 118 "/Users/spencernold/Documents/Workspaces/GitHub/tlang/src/lexer.re"
	{ 
                unsigned char c = start[0];
                if (c == quote) break;
                continue;
            }
#line 131 "/Users/spencernold/Documents/Workspaces/GitHub/tlang/src/lexer.c"
}
#line 123 "/Users/spencernold/Documents/Workspaces/GitHub/tlang/src/lexer.re"

    }

    char buf[length];
    int index = 0;
    buf[index++] = quote;
    for (unsigned char c = quote;;) {
        input->token = input->current;
        
#line 143 "/Users/spencernold/Documents/Workspaces/GitHub/tlang/src/lexer.c"
{
	char yych;
	if ((input->limit - input->current) < 2) if (!fill(input, 2)) { return NULL; }
	yych = *input->current;
	switch (yych) {
		case '\n': goto yy3;
		case '\\': goto yy5;
		default: goto yy2;
	}
yy2:
	++input->current;
#line 140 "/Users/spencernold/Documents/Workspaces/GitHub/tlang/src/lexer.re"
	{
                c = input->token[0];
                buf[index++] = c;
                if (c == quote) break;
                continue;
            }
#line 162 "/Users/spencernold/Documents/Workspaces/GitHub/tlang/src/lexer.c"
yy3:
	++input->current;
yy4:
#line 159 "/Users/spencernold/Documents/Workspaces/GitHub/tlang/src/lexer.re"
	{ return NULL; }
#line 168 "/Users/spencernold/Documents/Workspaces/GitHub/tlang/src/lexer.c"
yy5:
	yych = *++input->current;
	switch (yych) {
		case '"':
		case '\'':
		case '`': goto yy6;
		case '\\': goto yy7;
		case 'b': goto yy8;
		case 'f': goto yy9;
		case 'n': goto yy10;
		case 'r': goto yy11;
		case 't': goto yy12;
		default: goto yy4;
	}
yy6:
	++input->current;
#line 152 "/Users/spencernold/Documents/Workspaces/GitHub/tlang/src/lexer.re"
	{
                if (input->token[1] != quote) {
                    buf[index++] = input->token[0];
                }
                buf[index++] = input->token[1];
                continue;
            }
#line 193 "/Users/spencernold/Documents/Workspaces/GitHub/tlang/src/lexer.c"
yy7:
	++input->current;
#line 151 "/Users/spencernold/Documents/Workspaces/GitHub/tlang/src/lexer.re"
	{ buf[index++] = '\\'; continue; }
#line 198 "/Users/spencernold/Documents/Workspaces/GitHub/tlang/src/lexer.c"
yy8:
	++input->current;
#line 150 "/Users/spencernold/Documents/Workspaces/GitHub/tlang/src/lexer.re"
	{ buf[index++] = '\b'; continue; }
#line 203 "/Users/spencernold/Documents/Workspaces/GitHub/tlang/src/lexer.c"
yy9:
	++input->current;
#line 149 "/Users/spencernold/Documents/Workspaces/GitHub/tlang/src/lexer.re"
	{ buf[index++] = '\f'; continue; }
#line 208 "/Users/spencernold/Documents/Workspaces/GitHub/tlang/src/lexer.c"
yy10:
	++input->current;
#line 147 "/Users/spencernold/Documents/Workspaces/GitHub/tlang/src/lexer.re"
	{ buf[index++] = '\n'; continue; }
#line 213 "/Users/spencernold/Documents/Workspaces/GitHub/tlang/src/lexer.c"
yy11:
	++input->current;
#line 146 "/Users/spencernold/Documents/Workspaces/GitHub/tlang/src/lexer.re"
	{ buf[index++] = '\r'; continue; }
#line 218 "/Users/spencernold/Documents/Workspaces/GitHub/tlang/src/lexer.c"
yy12:
	++input->current;
#line 148 "/Users/spencernold/Documents/Workspaces/GitHub/tlang/src/lexer.re"
	{ buf[index++] = '\t'; continue; }
#line 223 "/Users/spencernold/Documents/Workspaces/GitHub/tlang/src/lexer.c"
}
#line 160 "/Users/spencernold/Documents/Workspaces/GitHub/tlang/src/lexer.re"

    }
    buf[index] = 0;
    return (char*) strdup(buf);
}

lex_token_stream_t* lex_run(lex_input_t* input) {
    lex_token_stream_t* stream = (lex_token_stream_t*) malloc(sizeof(lex_token_stream_t));
    if (stream == NULL) {
        return NULL;
    }
    stream->queue = allocate_tok_queue();
    stream->value = ERROR;
    for (;;) {
        input->token = input->current;
        
#line 242 "/Users/spencernold/Documents/Workspaces/GitHub/tlang/src/lexer.c"
{
	char yych;
	unsigned int yyaccept = 0;
	if ((input->limit - input->current) < 11) if (!fill(input, 11)) { stream->value = 0; return stream; }
	yych = *input->current;
	switch (yych) {
		case 0x00: goto yy14;
		case '\t':
		case '\n':
		case '\v':
		case '\r':
		case ' ': goto yy17;
		case '!': goto yy19;
		case '"':
		case '\'':
		case '`': goto yy20;
		case '%': goto yy21;
		case '&': goto yy23;
		case '(': goto yy25;
		case ')': goto yy26;
		case '*': goto yy27;
		case '+': goto yy29;
		case ',': goto yy31;
		case '-': goto yy32;
		case '.': goto yy34;
		case '/': goto yy36;
		case '0': goto yy38;
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9': goto yy39;
		case '<': goto yy41;
		case '=': goto yy43;
		case '>': goto yy44;
		case '?': goto yy46;
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'g':
		case 'h':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'q':
		case 'y':
		case 'z': goto yy47;
		case '[': goto yy50;
		case ']': goto yy51;
		case '^': goto yy52;
		case 'a': goto yy54;
		case 'b': goto yy55;
		case 'c': goto yy56;
		case 'd': goto yy57;
		case 'e': goto yy58;
		case 'f': goto yy59;
		case 'i': goto yy60;
		case 'n': goto yy61;
		case 'o': goto yy62;
		case 'p': goto yy63;
		case 'r': goto yy64;
		case 's': goto yy65;
		case 't': goto yy66;
		case 'u': goto yy67;
		case 'v': goto yy68;
		case 'w': goto yy69;
		case 'x': goto yy70;
		case '{': goto yy71;
		case '|': goto yy72;
		case '}': goto yy74;
		case '~': goto yy75;
		default: goto yy15;
	}
yy14:
	++input->current;
#line 185 "/Users/spencernold/Documents/Workspaces/GitHub/tlang/src/lexer.re"
	{
                stream->value = input->limit - input->token == YYMAXFILL;
                break;
            }
#line 352 "/Users/spencernold/Documents/Workspaces/GitHub/tlang/src/lexer.c"
yy15:
	++input->current;
yy16:
#line 321 "/Users/spencernold/Documents/Workspaces/GitHub/tlang/src/lexer.re"
	{ 
                lex_close_token_stream(stream);
                return NULL;
            }
#line 361 "/Users/spencernold/Documents/Workspaces/GitHub/tlang/src/lexer.c"
yy17:
	yyaccept = 0;
	input->marker = ++input->current;
	if (input->limit <= input->current) if (!fill(input, 1)) { stream->value = 0; return stream; }
	yych = *input->current;
	switch (yych) {
		case '\t':
		case '\n':
		case '\v':
		case '\r':
		case ' ': goto yy17;
		case '/': goto yy77;
		default: goto yy18;
	}
yy18:
#line 192 "/Users/spencernold/Documents/Workspaces/GitHub/tlang/src/lexer.re"
	{ continue; }
#line 379 "/Users/spencernold/Documents/Workspaces/GitHub/tlang/src/lexer.c"
yy19:
	++input->current;
#line 305 "/Users/spencernold/Documents/Workspaces/GitHub/tlang/src/lexer.re"
	{ _append_token(stream, NOT_OPER); continue; }
#line 384 "/Users/spencernold/Documents/Workspaces/GitHub/tlang/src/lexer.c"
yy20:
	++input->current;
#line 195 "/Users/spencernold/Documents/Workspaces/GitHub/tlang/src/lexer.re"
	{
                char* str = _parse_str_from_re2c(input);
                if (str == NULL) {
                    stream->value = ERROR;
                    return stream;
                }
                int len = strlen(str);
                _append_str_literal(stream, STRING_LIT, str, len);
                free(str);
                continue;
            }
#line 399 "/Users/spencernold/Documents/Workspaces/GitHub/tlang/src/lexer.c"
yy21:
	yych = *++input->current;
	switch (yych) {
		case '=': goto yy79;
		default: goto yy22;
	}
yy22:
#line 290 "/Users/spencernold/Documents/Workspaces/GitHub/tlang/src/lexer.re"
	{ _append_token(stream, MOD_OPER); continue; }
#line 409 "/Users/spencernold/Documents/Workspaces/GitHub/tlang/src/lexer.c"
yy23:
	yych = *++input->current;
	switch (yych) {
		case '&': goto yy80;
		default: goto yy24;
	}
yy24:
#line 307 "/Users/spencernold/Documents/Workspaces/GitHub/tlang/src/lexer.re"
	{ _append_token(stream, BIT_AND_OPER); continue; }
#line 419 "/Users/spencernold/Documents/Workspaces/GitHub/tlang/src/lexer.c"
yy25:
	++input->current;
#line 225 "/Users/spencernold/Documents/Workspaces/GitHub/tlang/src/lexer.re"
	{ _append_token(stream, O_PARENTHESES); continue; }
#line 424 "/Users/spencernold/Documents/Workspaces/GitHub/tlang/src/lexer.c"
yy26:
	++input->current;
#line 226 "/Users/spencernold/Documents/Workspaces/GitHub/tlang/src/lexer.re"
	{ _append_token(stream, C_PARENTHESES); continue; }
#line 429 "/Users/spencernold/Documents/Workspaces/GitHub/tlang/src/lexer.c"
yy27:
	yych = *++input->current;
	switch (yych) {
		case '*': goto yy82;
		case '=': goto yy83;
		default: goto yy28;
	}
yy28:
#line 288 "/Users/spencernold/Documents/Workspaces/GitHub/tlang/src/lexer.re"
	{ _append_token(stream, MUL_OPER); continue; }
#line 440 "/Users/spencernold/Documents/Workspaces/GitHub/tlang/src/lexer.c"
yy29:
	yych = *++input->current;
	switch (yych) {
		case '+': goto yy84;
		case '=': goto yy85;
		default: goto yy30;
	}
yy30:
#line 286 "/Users/spencernold/Documents/Workspaces/GitHub/tlang/src/lexer.re"
	{ _append_token(stream, ADD_OPER); continue; }
#line 451 "/Users/spencernold/Documents/Workspaces/GitHub/tlang/src/lexer.c"
yy31:
	++input->current;
#line 232 "/Users/spencernold/Documents/Workspaces/GitHub/tlang/src/lexer.re"
	{ _append_token(stream, COMMA); continue; }
#line 456 "/Users/spencernold/Documents/Workspaces/GitHub/tlang/src/lexer.c"
yy32:
	yyaccept = 1;
	yych = *(input->marker = ++input->current);
	switch (yych) {
		case '-': goto yy86;
		case '.': goto yy87;
		case '0': goto yy88;
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9': goto yy39;
		case '=': goto yy89;
		default: goto yy33;
	}
yy33:
#line 287 "/Users/spencernold/Documents/Workspaces/GitHub/tlang/src/lexer.re"
	{ _append_token(stream, SUB_OPER); continue; }
#line 479 "/Users/spencernold/Documents/Workspaces/GitHub/tlang/src/lexer.c"
yy34:
	yych = *++input->current;
	switch (yych) {
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9': goto yy90;
		default: goto yy35;
	}
yy35:
#line 231 "/Users/spencernold/Documents/Workspaces/GitHub/tlang/src/lexer.re"
	{ _append_token(stream, DOT); continue; }
#line 498 "/Users/spencernold/Documents/Workspaces/GitHub/tlang/src/lexer.c"
yy36:
	yych = *++input->current;
	switch (yych) {
		case '/': goto yy92;
		case '=': goto yy93;
		default: goto yy37;
	}
yy37:
#line 289 "/Users/spencernold/Documents/Workspaces/GitHub/tlang/src/lexer.re"
	{ _append_token(stream, DIV_OPER); continue; }
#line 509 "/Users/spencernold/Documents/Workspaces/GitHub/tlang/src/lexer.c"
yy38:
	yyaccept = 2;
	yych = *(input->marker = ++input->current);
	switch (yych) {
		case '.': goto yy90;
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9': goto yy88;
		case 'X':
		case 'x': goto yy94;
		default: goto yy16;
	}
yy39:
	++input->current;
	if (input->limit <= input->current) if (!fill(input, 1)) { stream->value = 0; return stream; }
	yych = *input->current;
	switch (yych) {
		case '.': goto yy90;
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9': goto yy39;
		default: goto yy40;
	}
yy40:
#line 208 "/Users/spencernold/Documents/Workspaces/GitHub/tlang/src/lexer.re"
	{ // Decimal
                long long value = _parse_dec_from_re2c(input);
                _append_decimal_literal(stream, INTEGER, value);
                continue;
            }
#line 554 "/Users/spencernold/Documents/Workspaces/GitHub/tlang/src/lexer.c"
yy41:
	yych = *++input->current;
	switch (yych) {
		case '<': goto yy95;
		case '=': goto yy97;
		default: goto yy42;
	}
yy42:
#line 300 "/Users/spencernold/Documents/Workspaces/GitHub/tlang/src/lexer.re"
	{ _append_token(stream, LT_OPER); continue; }
#line 565 "/Users/spencernold/Documents/Workspaces/GitHub/tlang/src/lexer.c"
yy43:
	++input->current;
#line 285 "/Users/spencernold/Documents/Workspaces/GitHub/tlang/src/lexer.re"
	{ _append_token(stream, EQ_OPER); continue; }
#line 570 "/Users/spencernold/Documents/Workspaces/GitHub/tlang/src/lexer.c"
yy44:
	yych = *++input->current;
	switch (yych) {
		case '=': goto yy98;
		case '>': goto yy99;
		default: goto yy45;
	}
yy45:
#line 299 "/Users/spencernold/Documents/Workspaces/GitHub/tlang/src/lexer.re"
	{ _append_token(stream, GT_OPER); continue; }
#line 581 "/Users/spencernold/Documents/Workspaces/GitHub/tlang/src/lexer.c"
yy46:
	++input->current;
#line 306 "/Users/spencernold/Documents/Workspaces/GitHub/tlang/src/lexer.re"
	{ _append_token(stream, TERNARY_OPER); continue; }
#line 586 "/Users/spencernold/Documents/Workspaces/GitHub/tlang/src/lexer.c"
yy47:
	++input->current;
	if (input->limit <= input->current) if (!fill(input, 1)) { stream->value = 0; return stream; }
	yych = *input->current;
yy48:
	switch (yych) {
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z': goto yy47;
		default: goto yy49;
	}
yy49:
#line 315 "/Users/spencernold/Documents/Workspaces/GitHub/tlang/src/lexer.re"
	{
                int len = (int) (input->current - input->token);
                _append_str_literal(stream, IDENTIFIER, (char*) input->token, len);
                continue;
            }
#line 665 "/Users/spencernold/Documents/Workspaces/GitHub/tlang/src/lexer.c"
yy50:
	++input->current;
#line 229 "/Users/spencernold/Documents/Workspaces/GitHub/tlang/src/lexer.re"
	{ _append_token(stream, O_BRACKET); continue; }
#line 670 "/Users/spencernold/Documents/Workspaces/GitHub/tlang/src/lexer.c"
yy51:
	++input->current;
#line 230 "/Users/spencernold/Documents/Workspaces/GitHub/tlang/src/lexer.re"
	{ _append_token(stream, C_BRACKET); continue; }
#line 675 "/Users/spencernold/Documents/Workspaces/GitHub/tlang/src/lexer.c"
yy52:
	++input->current;
yy53:
#line 309 "/Users/spencernold/Documents/Workspaces/GitHub/tlang/src/lexer.re"
	{ _append_token(stream, BIT_XOR_OPER); continue; }
#line 681 "/Users/spencernold/Documents/Workspaces/GitHub/tlang/src/lexer.c"
yy54:
	yych = *++input->current;
	switch (yych) {
		case 'b': goto yy101;
		case 'n': goto yy102;
		case 's': goto yy103;
		default: goto yy48;
	}
yy55:
	yych = *++input->current;
	switch (yych) {
		case 'i': goto yy104;
		case 'o': goto yy105;
		case 'r': goto yy106;
		default: goto yy48;
	}
yy56:
	yych = *++input->current;
	switch (yych) {
		case 'h': goto yy107;
		case 'l': goto yy108;
		case 'o': goto yy109;
		default: goto yy48;
	}
yy57:
	yych = *++input->current;
	switch (yych) {
		case 'e': goto yy110;
		default: goto yy48;
	}
yy58:
	yych = *++input->current;
	switch (yych) {
		case 'l': goto yy111;
		case 'n': goto yy112;
		case 'x': goto yy113;
		default: goto yy48;
	}
yy59:
	yych = *++input->current;
	switch (yych) {
		case 'a': goto yy114;
		case 'i': goto yy115;
		case 'l': goto yy116;
		case 'o': goto yy117;
		case 'u': goto yy118;
		default: goto yy48;
	}
yy60:
	yych = *++input->current;
	switch (yych) {
		case 'f': goto yy119;
		case 'm': goto yy121;
		case 'n': goto yy122;
		case 's': goto yy124;
		default: goto yy48;
	}
yy61:
	yych = *++input->current;
	switch (yych) {
		case 'e': goto yy126;
		case 'u': goto yy127;
		default: goto yy48;
	}
yy62:
	yych = *++input->current;
	switch (yych) {
		case 'r': goto yy128;
		default: goto yy48;
	}
yy63:
	yych = *++input->current;
	switch (yych) {
		case 'r': goto yy130;
		default: goto yy48;
	}
yy64:
	yych = *++input->current;
	switch (yych) {
		case 'a': goto yy131;
		case 'e': goto yy132;
		default: goto yy48;
	}
yy65:
	yych = *++input->current;
	switch (yych) {
		case 'h': goto yy133;
		case 't': goto yy134;
		default: goto yy48;
	}
yy66:
	yych = *++input->current;
	switch (yych) {
		case 'h': goto yy135;
		case 'r': goto yy136;
		default: goto yy48;
	}
yy67:
	yych = *++input->current;
	switch (yych) {
		case 'i': goto yy137;
		case 'n': goto yy138;
		default: goto yy48;
	}
yy68:
	yych = *++input->current;
	switch (yych) {
		case 'o': goto yy139;
		default: goto yy48;
	}
yy69:
	yych = *++input->current;
	switch (yych) {
		case 'h': goto yy140;
		default: goto yy48;
	}
yy70:
	yych = *++input->current;
	switch (yych) {
		case 'o': goto yy141;
		default: goto yy48;
	}
yy71:
	++input->current;
#line 227 "/Users/spencernold/Documents/Workspaces/GitHub/tlang/src/lexer.re"
	{ _append_token(stream, O_C_BRACKET); continue; }
#line 808 "/Users/spencernold/Documents/Workspaces/GitHub/tlang/src/lexer.c"
yy72:
	yych = *++input->current;
	switch (yych) {
		case '|': goto yy142;
		default: goto yy73;
	}
yy73:
#line 308 "/Users/spencernold/Documents/Workspaces/GitHub/tlang/src/lexer.re"
	{ _append_token(stream, BIT_OR_OPER); continue; }
#line 818 "/Users/spencernold/Documents/Workspaces/GitHub/tlang/src/lexer.c"
yy74:
	++input->current;
#line 228 "/Users/spencernold/Documents/Workspaces/GitHub/tlang/src/lexer.re"
	{ _append_token(stream, C_C_BRACKET); continue; }
#line 823 "/Users/spencernold/Documents/Workspaces/GitHub/tlang/src/lexer.c"
yy75:
	++input->current;
yy76:
#line 310 "/Users/spencernold/Documents/Workspaces/GitHub/tlang/src/lexer.re"
	{ _append_token(stream, BIT_NOT_OPER); continue; }
#line 829 "/Users/spencernold/Documents/Workspaces/GitHub/tlang/src/lexer.c"
yy77:
	++input->current;
	if (input->limit <= input->current) if (!fill(input, 1)) { stream->value = 0; return stream; }
	yych = *input->current;
	switch (yych) {
		case '/': goto yy92;
		default: goto yy78;
	}
yy78:
	input->current = input->marker;
	switch (yyaccept) {
		case 0: goto yy18;
		case 1: goto yy33;
		default: goto yy16;
	}
yy79:
	++input->current;
#line 297 "/Users/spencernold/Documents/Workspaces/GitHub/tlang/src/lexer.re"
	{ _append_token(stream, MOD_EQ_OPER); continue; }
#line 849 "/Users/spencernold/Documents/Workspaces/GitHub/tlang/src/lexer.c"
yy80:
	++input->current;
yy81:
#line 303 "/Users/spencernold/Documents/Workspaces/GitHub/tlang/src/lexer.re"
	{ _append_token(stream, AND_OPER); continue; }
#line 855 "/Users/spencernold/Documents/Workspaces/GitHub/tlang/src/lexer.c"
yy82:
	++input->current;
#line 298 "/Users/spencernold/Documents/Workspaces/GitHub/tlang/src/lexer.re"
	{ _append_token(stream, POW_OPER); continue; }
#line 860 "/Users/spencernold/Documents/Workspaces/GitHub/tlang/src/lexer.c"
yy83:
	++input->current;
#line 295 "/Users/spencernold/Documents/Workspaces/GitHub/tlang/src/lexer.re"
	{ _append_token(stream, MUL_EQ_OPER); continue; }
#line 865 "/Users/spencernold/Documents/Workspaces/GitHub/tlang/src/lexer.c"
yy84:
	++input->current;
#line 291 "/Users/spencernold/Documents/Workspaces/GitHub/tlang/src/lexer.re"
	{ _append_token(stream, INCR_OPER); continue; }
#line 870 "/Users/spencernold/Documents/Workspaces/GitHub/tlang/src/lexer.c"
yy85:
	++input->current;
#line 293 "/Users/spencernold/Documents/Workspaces/GitHub/tlang/src/lexer.re"
	{ _append_token(stream, ADD_EQ_OPER); continue; }
#line 875 "/Users/spencernold/Documents/Workspaces/GitHub/tlang/src/lexer.c"
yy86:
	++input->current;
#line 292 "/Users/spencernold/Documents/Workspaces/GitHub/tlang/src/lexer.re"
	{ _append_token(stream, DECR_OPER); continue; }
#line 880 "/Users/spencernold/Documents/Workspaces/GitHub/tlang/src/lexer.c"
yy87:
	yych = *++input->current;
	switch (yych) {
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9': goto yy90;
		default: goto yy78;
	}
yy88:
	++input->current;
	if (input->limit <= input->current) if (!fill(input, 1)) { stream->value = 0; return stream; }
	yych = *input->current;
	switch (yych) {
		case '.': goto yy90;
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9': goto yy88;
		default: goto yy78;
	}
yy89:
	++input->current;
#line 294 "/Users/spencernold/Documents/Workspaces/GitHub/tlang/src/lexer.re"
	{ _append_token(stream, SUB_EQ_OPER); continue; }
#line 918 "/Users/spencernold/Documents/Workspaces/GitHub/tlang/src/lexer.c"
yy90:
	++input->current;
	if (input->limit <= input->current) if (!fill(input, 1)) { stream->value = 0; return stream; }
	yych = *input->current;
	switch (yych) {
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9': goto yy90;
		default: goto yy91;
	}
yy91:
#line 218 "/Users/spencernold/Documents/Workspaces/GitHub/tlang/src/lexer.re"
	{ // Float
                double value = _parse_float_from_re2c(input);
                _append_floating_point_literal(stream, FLOATING_POINT, value);
                continue;
            }
#line 943 "/Users/spencernold/Documents/Workspaces/GitHub/tlang/src/lexer.c"
yy92:
	++input->current;
	if (input->limit <= input->current) if (!fill(input, 1)) { stream->value = 0; return stream; }
	yych = *input->current;
	switch (yych) {
		case '\n': goto yy17;
		default: goto yy92;
	}
yy93:
	++input->current;
#line 296 "/Users/spencernold/Documents/Workspaces/GitHub/tlang/src/lexer.re"
	{ _append_token(stream, DIV_EQ_OPER); continue; }
#line 956 "/Users/spencernold/Documents/Workspaces/GitHub/tlang/src/lexer.c"
yy94:
	yych = *++input->current;
	switch (yych) {
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f': goto yy143;
		default: goto yy78;
	}
yy95:
	++input->current;
yy96:
#line 312 "/Users/spencernold/Documents/Workspaces/GitHub/tlang/src/lexer.re"
	{ _append_token(stream, BIT_SHL_OPER); continue; }
#line 989 "/Users/spencernold/Documents/Workspaces/GitHub/tlang/src/lexer.c"
yy97:
